log
Wed, Mar 26, 2025  8:32:56 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Wed, Mar 26, 2025  8:37:22 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
31f17fb
Wed, Mar 26, 2025  8:40:12 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:41:16: error: 'List' {aka 'struct List'} has no member named 'data'
   41 |     return list->data;
      |                ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
f2504e4
Wed, Mar 26, 2025  8:40:57 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
29e174f
Wed, Mar 26, 2025  8:43:10 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
05dab91
Wed, Mar 26, 2025  8:43:29 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5c268f6
Wed, Mar 26, 2025  8:44:56 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c9dc60c
Wed, Mar 26, 2025  8:47:16 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
5d9f85f
Wed, Mar 26, 2025  8:47:59 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
48af8fc
Wed, Mar 26, 2025  8:48:51 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
292c6e0
Wed, Mar 26, 2025  8:52:23 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2a2007d
Wed, Mar 26, 2025  8:53:19 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
9395d05
Thu, Mar 27, 2025  1:21:25 PM: 
 tests:  5|4
total_score: 25/70
08e63cc
Thu, Mar 27, 2025  1:25:33 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
a51d307
Thu, Mar 27, 2025  1:25:57 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f01bc06
Thu, Mar 27, 2025  1:26:46 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
4624eb7
Thu, Mar 27, 2025  1:27:23 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'prevList':
list.c:64:1: error: expected ';' before '}' token
   64 | }
      | ^
Compilation failed
ea7e701
